pls_core/src/inflections/snapshots/pls_core__inflections__tests__inflection_tests__indeclinable_1.snap
---
source: pls_core/src/inflections/mod.rs
expression: html

---
<div class="pls-inflection-root">
  
<div class="pls-inflection-type-indeclinable">
  <i>See <strong>^agamāsi$</strong> for inflection table.</i>
  </div>
<div class="pls-inflection-summary-definition">
  <span class="pls-inflection-summary-definition-pos">(aor)</span>
  <span class="pls-inflection-summary-definition-meaning">they went</span>
</div>

  
</div>

