pls_core/src/inflections/snapshots/pls_core__inflections__tests__inflection_tests__indeclinable_1_short.snap
---
source: pls_core/src/inflections/mod.rs
expression: html

---
<div class="pls-inflection-root">
  
<div class="pls-inflection-type-indeclinable">
  <i>See <strong>^agamāsi$</strong> for inflection table.</i>
  </div>


  
</div>

