pls_core/src/inflections/snapshots/pls_core__inflections__tests__inflection_tests__inflected_form_1.snap
---
source: pls_core/src/inflections/mod.rs
expression: html

---
<div class="pls-inflection-root">
  <header class="pls-inflection-header">
    <summary>
      <div class="pls-inflection-summary-word-info">^ahesuṃ$ infl</div>
      <div class="pls-inflection-summary-definition">
        <span class="pls-inflection-summary-definition-pos">(aor)</span> <span class="pls-inflection-summary-definition-meaning">there were; they were</span>
      </div>
    </summary>
  </header>
<div class="pls-inflection-type-indeclinable">
  <i>NOTE: See <strong>^$</strong> for inflection table.</i>
  </div>

  
</div>

