pls_core/src/inflections/snapshots/pls_core__inflections__tests__inflection_tests__inflected_form_1_short.snap
---
source: pls_core/src/inflections/mod.rs
expression: html

---
<div class="pls-inflection-root">
  
<div class="pls-inflection-type-indeclinable">
  <i>NOTE: <strong>^ahesuṃ$</strong>&quot; does not have inflection table as it is an inflected form.</i>
</div>

  
</div>

